feat: Implement authentication and theme switching
Adds a login flow and integrates dark mode support. Users must now log in before accessing the voice analysis features. The application now supports switching between light and dark themes, enhancing user experience and accessibility.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vocal Health AI</title>
+    <script>
+      // Configure Tailwind to use the 'class' strategy for dark mode
+      tailwind.config = {
+        darkMode: 'class'
+      }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/index.css" />
   <script type="importmap">
 {
   "imports": {
